# audiokeys

./: .gitignore  LICENCE  LICENSE  README.md  linuxinstaller.spec  main.py  pyproject.toml  wininstaller.spec
audiokeys/: __init__.py  audio_worker.py  cli_verison.py  constants.py  gui.py  key_sender.py  noise_gate.py  note_calibration.py  sample_matcher.py  sound_worker.py  streams.py  utils.py
audiokeys/assets/: splash.xcf
audiokeys/librosa/: sequence.py
librosa/: __init__.py  feature.py
tests/: test_noise_gate.py  test_note_calibration.py  test_sample_matcher.py  test_sound_worker.py  test_utils.py
